tests/ui/compile_error_in_generated_content.stderr
error[E0614]: type `str` cannot be dereferenced
 --> tests/ui/compile_error_in_generated_content.rs:3:17
  |
3 |       #[fieldwork(get, deref = "()")]
  |  _________________^
4 | |     string: String,
  | |__________^ can't be dereferenced

error[E0614]: type `str` cannot be dereferenced
  --> tests/ui/compile_error_in_generated_content.rs:11:5
   |
11 |     string: String,
   |     ^^^^^^^^^^^^^^ can't be dereferenced
