tests/ui/compile_error_in_generated_content.rs
#[derive(fieldwork::Fieldwork)]
struct Something {
    #[fieldwork(get, deref = "()")]
    string: String,
}

#[derive(fieldwork::Fieldwork)]
#[fieldwork(get)]
struct SomethingElse {
    #[fieldwork(deref = "()")]
    string: String,
}

fn main() {}
